css/main.css
/* ... */
/* ------------ */
/* Footer       */
/* ------------ */
#contactme {
  background-image: url(../img/bg_footer.png);
  background-repeat: no-repeat;
  overflow: hidden;
}

#contactme .contacttxt__pocket {
  text-align: center;
  /* border: 1px solid red; */
}

#contactme .contacttxt__text {
  font-size: x-large;
  /* border: 1px solid orange; */
}

.contactme-icon {
  margin: 25px 10px;
  font-size: xx-large;
  /* border: 1px solid orange; */
}

/* ------------ */
/* About Me     */
/* ------------ */

#aboutMe {
  background: url(../img/bg_abt02.png) right bottom no-repeat,
    url(../img/bg_abt01.png) left top no-repeat;
}

#aboutMe .aboutme__character img {
  padding: 20px 0;
  width: 180px;
  /* border: 1px solid violet; */
}

#aboutMe .text-content {
  width: 70%;
}
/* ------------ */
/* Gallery      */
/* ------------ */
.logoBack {
  background-color: black;
}

#logoG,
#IllustG,
#mascotG,
#psdtutG,
#printG,
#codeG {
  background-color: #f6f4f0;
}

.gallery-wrapper {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.text-content {
  width: 90%;
}

#psdtutG .text-container {
  margin-bottom: 30px;
}

.ads {
  height: 250px;
}

pre.scjSnipplet {
  max-height: 250px;
  margin-top: 0 !important;
}

#printG .textpanel-right .text-container {
  margin: 0 55px;
}
#printG .textpanel-right .text-content {
  margin-top: 30px;
  width: auto;
}

#mascotG .textpanel-right .text-container {
  margin: 0 55px;
}
#mascotG .textpanel-right .text-content {
  margin-top: 30px;
  width: auto;
}

#psdtutG .textpanel-right .text-container {
  margin: 0 55px;
}
#psdtutG .textpanel-right .text-content {
  margin-top: 30px;
  width: auto;
}

/* ------------------------ */
/* Footer Nav               */
/* ------------------------ */

.footer-navbtn-left .footer-content {
  margin: 80px 150px;
  text-align: right;
}
.footer-navbtn-right .footer-content {
  margin: 80px 150px;
}

.footer-navbtn-left,
.footer-navbtn-right {
  height: 200px;
  width: 50vw;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;
}
.footer-navbtn-left {
  position: absolute;
  left: 0;
}
.footer-navbtn-right {
  position: absolute;
  right: 0;
}
.footer-navbtn-left:hover {
  width: 60vw;
}

.footer-navbtn-right:hover {
  width: 60vw;
}
.st0 {
  fill: #666;
}
.footer-navbtn-left:hover .st0 {
  fill: #dad0e8;
}
.footer-navbtn-right:hover .st0 {
  fill: #dad0e8;
}
/* ------------------------ */
/* Animation Last section   */
/* ------------------------ */
/* --- set --- */
#ani-rect01 {
  position: absolute;
  top: 0;
  /* border: 1px solid grey; */
}

#ani-rect02 {
  position: absolute;
  top: 0;
  right: 0;
  /* border: 1px solid grey; */
}
/* --- animate --- */
.bounce {
  transition: all 0.8s;
}

.bounce:hover {
  transform: translateY(-10px);
  text-decoration: none;
}
/* --- */
.scrollAni-arrow-sec a {
  position: relative;
  bottom: 5px;
  /* left: 50%; */
  z-index: 2;
  display: inline-block;
  -webkit-transform: translate(0, -50%);
  transform: translate(0, -50%);
  color: #9e9e9e;
  font-family: "avenir", sans-serif;
  /* font   : normal 400 20px/1 'Josefin Sans', sans-serif; */
  letter-spacing: 0.1em;
  text-decoration: none;
  transition: opacity 0.3s;
}

.scrollAni-arrow-sec a:hover {
  opacity: 0.5;
}

#scrollAni-arrow a {
  padding-top: 50px;
  position: relative;
  top: 90px;
}

#scrollAni-arrow a span {
  position: absolute;
  top: 0;
  /* left: 50%; */
  width: 24px;
  height: 24px;
  margin-left: -12px;
  border-left: 1px solid #9e9e9e;
  border-bottom: 1px solid #9e9e9e;
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-animation: sdb07 2s infinite;
  animation: sdb07 2s infinite;
  opacity: 0;
  box-sizing: border-box;
}

#scrollAni-arrow a span:nth-of-type(1) {
  -webkit-animation-delay: 0s;
  animation-delay: 0s;
}

#scrollAni-arrow a span:nth-of-type(2) {
  top: 16px;
  -webkit-animation-delay: 0.15s;
  animation-delay: 0.15s;
}

#scrollAni-arrow a span:nth-of-type(3) {
  top: 32px;
  -webkit-animation-delay: 0.3s;
  animation-delay: 0.3s;
}

@-webkit-keyframes sdb07 {
  0% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes sdb07 {
  0% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}
/* ==========================================================================
   Transistion Page
   ========================================================================== */
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: #a2cdff;
  transform: scale(0);
  transform-origin: top;
  z-index: 100;
}

.transition-fade {
  transition: 0.4s;
  transform: translateY(0);
}
html.is-animating .transition-fade {
  opacity: 0;
  transform: translateY(-800px);
}

.transition-wipe {
  transition: 0.8s;
  transform: scaleY(0);
}
html.is-animating .transition-wipe {
  transform: scaleY(1);
}
/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden,
[hidden] {
  display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.sr-only {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  /* 1 */
}
/* ... */

